word wrap fix

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -63,6 +63,8 @@ body {
     background-color: #fff;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
+    word-wrap: break-word; /* force long words to break */
+    overflow-wrap: break-word; /* newer syntax standard that replaces word-wrap */
 }
 
 /* No `:visited` state is required by default (browsers will use `a`) */
@@ -151,6 +153,7 @@ abbr[title] {
 code,
 pre {
     font-family: Menlo, Monaco, "Courier New", monospace;
+    white-space: pre-wrap; /* force long lines to break */
 }
 code {
     padding: .25em .5em;
